Fix padding on Kadence Row block on alignfull

--- a/assets/scss/components/blocks-plugins/_kadence-blocks.scss
+++ b/assets/scss/components/blocks-plugins/_kadence-blocks.scss
@@ -10,6 +10,11 @@
 	.full-width-content &,
 	.content-width & {
 
+        &[class^="wp-block-kadence-"].alignfull {
+            padding: 0;
+
+        }
+
         &.wp-block-kadence-rowlayout.alignfull {
             padding: 0;
         }
